--- a/ELiquid.Web/Web.Release.config
+++ b/ELiquid.Web/Web.Release.config
@@ -16,7 +16,7 @@
 	
 	<connectionStrings>
 		<add name="ELiquidDbContext"
-		  connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A6925A_ELiquidDbContext;User Id=DB_A6925A_ELiquidDbContext_admin;Password=articolo31"
+		  connectionString="Data Source=SQL5102.site4now.net;Initial Catalog=DB_A6925A_ELiquidDbContext;Persist Security Info=True;User ID=DB_A6925A_ELiquidDbContext_admin;TrustServerCertificate=True"
 		  xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
 	</connectionStrings>
 	<system.web>
